resources/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      name: code-server
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: codercom/code-server:latest
          args:
            - --auth
            - none
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/coder/project
              name: project
      volumes:
        - name: project
          persistentVolumeClaim:
            claimName: project
  selector:
    matchLabels:
      app: code-server
