resources/code-server/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: code-server
  type: ClusterIP
