resources/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: code-server
spec:
  rules:
    - host: code-server.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: code-server
              servicePort: 8080
